networking/deployment/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-service-deployment
  labels:
    app: java-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: java-service
  template:
    metadata:
      labels:
        app: java-service
    spec:
      containers:
        - name: java-service
          image: javaguildkubernetes/java-service:networking
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
