networking/deployment/service.yml
apiVersion: v1
kind: Service
metadata:
  name: java-service
spec:
  selector:
    app: java-service
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8080
