networking/deployment/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: java-ingress
  labels:
    demo: networking
spec:
  ingressClassName: nginx
  rules:
    - host: hello.localdev.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  java-service
                port:
                  number: 8888
